[package]
name = "iced_markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.0.1"


[dependencies.iced]
git = "https://github.com/iced-rs/iced"
features = ["image", "canvas", "debug", "advanced"]


[workspace]
members = [
    "example",
]
