[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_markdown = { path = "../" }


[dependencies.iced]
git = "https://github.com/iced-rs/iced"
features = ["image", "canvas", "debug", "advanced"]

